--- a/kubernetes/ingress-nginx/v1.11_custom_values.yaml
+++ b/kubernetes/ingress-nginx/v1.11_custom_values.yaml
@@ -77,7 +77,7 @@ controller:
       servicePort: 443
       type: ClusterIP
   affinity: {}
-  allowSnippetAnnotations: false
+  allowSnippetAnnotations: true
   annotations: {}
   autoscaling:
     annotations: {}
