--- a/ansible/playbooks/postgres/pg_set_perms.yml
+++ b/ansible/playbooks/postgres/pg_set_perms.yml
@@ -14,6 +14,20 @@
 
   tasks:
 
+    - name: Add entries to pg_hba
+      community.postgresql.postgresql_pg_hba:
+        dest: "/etc/postgresql/{{ pg_version }}/main/pg_hba.conf"
+        address: "{{ item.address | default(omit) }}"
+        contype: "{{ item.contype }}"
+        databases: "{{ item.databases }}"
+        method: "{{ item.method }}"
+        users: "{{ item.users }}"
+      become: true
+      become_user: postgres
+      with_items: "{{ postgresql_hba_entries }}"
+      notify:
+        - Restart postgresql
+
     - name: Grant access to restored db
       become: yes
       become_user: postgres
