--- a/kubernetes/storage/volumes/pv-grafana.yaml
+++ b/kubernetes/storage/volumes/pv-grafana.yaml
@@ -1,28 +1,28 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: grafana-kube-pv
+  name: kube-grafana-stack-pv
   namespace: monitoring
 spec:
   capacity:
     storage: 10Gi
   volumeMode: Filesystem
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   storageClassName: longhorn
   local:
     path: /grafana-data
-
   nodeAffinity:
     required:
       nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - trahkube2
-          - trahkube3
-          - trahkube4
-          - trahk3worker1
-          - trahkubeapi1
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - trahkube2
+                - trahkube3
+                - trahkube4
+                - trahk3worker1
+                - trahkubeapi1
+
