--- a/kubernetes/storage/volumes/pvc-grafana.yaml
+++ b/kubernetes/storage/volumes/pvc-grafana.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: grafana-pvc
+  name: kube-prometheus-stack-pvc
   namespace: monitoring
 spec:
   accessModes:
@@ -9,5 +9,5 @@ spec:
   storageClassName: longhorn
   resources:
     requests:
-      storage: 4Gi
-
+      storage: 10Gi
+  volumeName: kube-prometheus-stack-pv
