--- a/kubernetes/ingress-nginx/grafana-nginx-ingress.yaml
+++ b/kubernetes/ingress-nginx/grafana-nginx-ingress.yaml
@@ -43,3 +43,27 @@ spec:
                 name: prometheus-operated
                 port:
                   number: 9090
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: proxmox-metrics-ingress
+  namespace: monitoring
+spec:
+  ingressClassName: nginx
+  tls:
+    - hosts:
+        - proxmox-metrics.trahan.dev
+      secretName: trahan-dev-cert
+  rules:
+    - host: "proxmox-metrics.trahan.dev"
+      http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: proxmox-exporter
+                port:
+                  number: 8080
+
