--- a/kubernetes/prometheus/values.yaml
+++ b/kubernetes/prometheus/values.yaml
@@ -8,6 +8,17 @@ prometheus:
           resources:
             requests:
               storage: 10Gi
+    additionalScrapeConfigs: |
+      - job_name: goinfra-https
+        scrape_interval: 5s
+        static_configs:
+         - targets: ['go-infra-service.default.svc.cluster.local:8993']
+        metrics_path: '/metrics'
+      - job_name: proxmox-exporter
+        scrape_interval: 5s
+        static_configs:
+          - targets: ['proxmox-exporter.monitoring.svc.cluster.local:8080']
+        metrics_path: "/metrics"
 alertmanager:
   alertmanagerSpec:
     storageSpec:
