--- a/ansible/playbooks/dns/vars/vars.yaml
+++ b/ansible/playbooks/dns/vars/vars.yaml
@@ -108,6 +108,9 @@ dns_records:
 - { host: trahtestdb1, type: A, zone: trahan.dev, record_value: "10.0.0.26" }
 - { host: trahtestdb2, type: A, zone: trahan.dev, record_value: "10.0.0.27" }
 - { host: ngmetrics, type: A, zone: trahan.dev, record_value: "10.0.0.65" }
+- { host: gofiles, type: A, zone: trahan.dev, record_value: "10.0.0.65" }
+- { host: filesrv, type: A, zone: trahan.dev, record_value: "10.0.0.65" }
+- { host: longhorn-talos, type: A, zone: trahan.dev, record_value: "10.0.0.72" }
 
 sub_zone_records:
   - { host: api, type: A, zone: test.trahan.dev, record_value: "10.0.1.64" }
