--- a/kubernetes/ingress-nginx/proxmox-external-ingress.yaml
+++ b/kubernetes/ingress-nginx/proxmox-external-ingress.yaml
@@ -6,10 +6,10 @@ metadata:
 spec:
   externalName: proxmox2.trahan.dev
   ports:
-  - name: https
-    port: 8006
-    protocol: TCP
-    targetPort: 8006
+    - name: https
+      port: 8006
+      protocol: TCP
+      targetPort: 8006
   sessionAffinity: None
   type: ExternalName
 status:
@@ -23,10 +23,10 @@ metadata:
 spec:
   externalName: proxmox3.trahan.dev
   ports:
-  - name: https
-    port: 8006
-    protocol: TCP
-    targetPort: 8006
+    - name: https
+      port: 8006
+      protocol: TCP
+      targetPort: 8006
   sessionAffinity: None
   type: ExternalName
 status:
@@ -40,10 +40,10 @@ metadata:
 spec:
   externalName: proxmox4.trahan.dev
   ports:
-  - name: https
-    port: 8006
-    protocol: TCP
-    targetPort: 8006
+    - name: https
+      port: 8006
+      protocol: TCP
+      targetPort: 8006
   sessionAffinity: None
   type: ExternalName
 status:
@@ -55,7 +55,8 @@ metadata:
   name: proxmox2-ingress
   namespace: default
   annotations:
-    ingress.kubernetes.io/configuration-snippet: "proxy_set_header Host $http_host;\nproxy_set_header
+    ingress.kubernetes.io/configuration-snippet:
+      "proxy_set_header Host $http_host;\nproxy_set_header
       X-Real-IP $remote_addr;\nproxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       \     \nproxy_http_version 1.1;\nproxy_set_header Upgrade $http_upgrade;\nproxy_set_header
       Connection $connection_upgrade;      "
@@ -88,14 +89,15 @@ spec:
                 name: proxmox2-service
                 port:
                   number: 8006
---- 
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: proxmox3-ingress
   namespace: default
   annotations:
-    ingress.kubernetes.io/configuration-snippet: "proxy_set_header Host $http_host;\nproxy_set_header
+    ingress.kubernetes.io/configuration-snippet:
+      "proxy_set_header Host $http_host;\nproxy_set_header
       X-Real-IP $remote_addr;\nproxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       \     \nproxy_http_version 1.1;\nproxy_set_header Upgrade $http_upgrade;\nproxy_set_header
       Connection $connection_upgrade;      "
@@ -128,14 +130,15 @@ spec:
                 name: proxmox3-service
                 port:
                   number: 8006
---- 
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: proxmox4-ingress
   namespace: default
   annotations:
-    ingress.kubernetes.io/configuration-snippet: "proxy_set_header Host $http_host;\nproxy_set_header
+    ingress.kubernetes.io/configuration-snippet:
+      "proxy_set_header Host $http_host;\nproxy_set_header
       X-Real-IP $remote_addr;\nproxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       \     \nproxy_http_version 1.1;\nproxy_set_header Upgrade $http_upgrade;\nproxy_set_header
       Connection $connection_upgrade;      "
