--- a/kubernetes/ingress-nginx/longhorn-ingress.yaml
+++ b/kubernetes/ingress-nginx/longhorn-ingress.yaml
@@ -19,5 +19,28 @@ spec:
               service:
                 name: longhorn-frontend
                 port:
-                  number: 8000
+                  number: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: longhorn-ingress
+  namespace: longhorn-system
+spec:
+  ingressClassName: nginx
+  tls:
+    - hosts:
+        - longhorn.trahan.dev
+      secretName: trahan-dev-cert
+  rules:
+    - host: "longhorn.trahan.dev"
+      http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: longhorn-frontend
+                port:
+                  number: 80
 
